--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,4 @@
-cycler==0.11.0
-fonttools==4.33.1
-kiwisolver==1.4.2
-matplotlib==3.5.1
-numpy==1.22.3
-opencv-python==4.5.5.64
-packaging==21.3
-Pillow==10.0.1
-pyparsing==3.0.8
-python-dateutil==2.8.2
-six==1.16.0
+jupyterlab
+opencv-python
+patchify
+scipy
